fixed overflow in small screens and navbar links doesnt go to dist

--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,7 @@
 
 .no-bar {
   scrollbar-width: none;
+  scrollbar-width: none;
 }
 
 /* * {
